@@ -40,7 +40,7 @@
             Hab. Space
           </th>
           <th>
-            1e12 Space/Price
+            Price/Space
           </th>
           <th>Queue?</th>
         </tr>
@@ -55,7 +55,7 @@
           </td>
           <td class="monospace">{{ data.buildPriceNext | format }}</td>
           <td class="monospace">{{ data.habSpace | format }}</td>
-          <td class="monospace">{{ data.habSpaceDivPrice | format }}</td>
+          <td class="monospace">{{ data.priceDivDabSpace | format }}</td>
           <td>
             <button
               nz-button
